[tool.poetry]
name = "tolerancias"
version = "0.1.0"
description = "A minimal tool to work with dimensional tolerances."
authors = ["flyingbot91 <flyingbot91@gmx.com>"]
maintainers = ["flyingbot91 <flyingbot91@gmx.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = [
	"Mechanical engineering",
	"Dimensional tolerances",
]
repository = "https://github.com/flyingbot91/tolerancias"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
